# roxify

./: .gitignore  .npmignore  .npmrc  BENCHMARK_SUMMARY.md  BUILD_INTEGRATION.md  CHANGELOG.md  Cargo.toml  EXPLANATION_v1.3.1.md  HOTFIX_COMPLETION_STATUS.md  HOTFIX_NOTES.md  HOTFIX_RELEASE_GUIDE.md  INTEGRATION_COMPLETE_FINAL.md  LICENSE  OPTIMIZATIONS.md  README.md  README_HOTFIX.txt  RELEASE_1.4.0.md  RELEASE_NOTES_1.15.1.md  RELEASE_NOTES_1.3.1.md  RELEASE_NOTES_1.5.0.md  RELEASE_NOTES_1.5.1.md  RELEASE_NOTES_1.5.5.md  VALIDATION_CHECKLIST.md  bench.sh  benchmark_compression_levels.ps1  benchmark_simple.ps1  benchmark_small_files.ps1  check_marker.cjs  compare-encoders.sh  libroxify_native.node  original.txt  package-lock.json  package.json  performance_validation.ps1  release.sh  renammed.txt  roxify-1.2.8.tgz  roxify_native.node  test-native-single.cjs  test-zstd-direct.cjs  (+11 more)
.cargo/: config.toml
.github/workflows/: build.yml  ci-and-release.yml  ci.yml  publish-gh-packages.yml  release-macos-cli.yml  release.yml  windows-hotfix.yml  windows-msvc-smoke.yml
docs/: ARCHITECTURE_FINALE.md  AUTO_OPTIMIZATION.md  BENCHMARKS.md  BENCHMARK_FINAL_REPORT.md  BLOCK_ENCODING_ANALYSIS.md  BUILD.md  CHANGELOG.md  CLI.md  COLD_BENCHMARK_2026-04-15.json  COMPLETION_CHECKLIST.md  COMPRESSION_OPTIMIZATION_FINAL.md  CROSS_PLATFORM.md  EXECUTIVE_SUMMARY.md  FORMAT_RECONVERSION.md  HYBRID_COMPRESSION_GUIDE.md  IMPLEMENTATION_CHECKLIST.md  IMPLEMENTATION_SUMMARY.md  INDEX.md  JAVASCRIPT_SDK.md  LOSSY_RESILIENCE.md  NODEJS_QUICK_START.md  README.md  README_HYBRID.md  RELEASE_1.4.0.md  RELEASE_1.4.1.md  RELEASE_1.6.2.md  RELEASE_1.6.3.md  RELEASE_1.7.1.md
native/: archive.rs  audio.rs  bench_hybrid.rs  bwt.rs  common.rs  context_mixing.rs  core.rs  crypto.rs  encoder.rs  gpu.rs  hybrid.rs  image_utils.rs  io_advice.rs  io_ntfs_optimized.rs  lib.rs  main.rs  mtf.rs  packer.rs  pipeline.rs  png_chunk_writer.rs  png_utils.rs  pool.rs  progress.rs  rans.rs  rans_byte.rs  reconstitution.rs  reconstitution_test.rs  streaming.rs  streaming_decode.rs  streaming_encode.rs  test_loop.rs  test_small_bwt.rs  test_stages.rs  test_transitions.rs  test_transitions2.rs
native/shaders/: entropy.wgsl  mtf.wgsl  rle.wgsl
native/tests/: cli_defaults.rs
release/: roxify_native-x86_64-pc-windows-msvc.node  roxify_native-x86_64-unknown-linux-gnu.node
release-artifacts/native-x86_64-unknown-linux-gnu/x86_64-unknown-linux-gnu/: libroxify_native.node
release-artifacts/smoke-results-x86_64-pc-windows-msvc/: results.json
release-artifacts/smoke-results-x86_64-unknown-linux-gnu/: decoded.txt  results.json
scripts/: analyze-alternatives.sh  benchmark-archive-matrix.py  benchmark-cold.py  benchmark-compression-final.sh  benchmark-compression.sh  benchmark-final.sh  benchmark-full.sh  benchmark-json-compression.sh  benchmark-real-final.sh  benchmark-report.sh  benchmark-rox.sh  benchmark-rust-only.sh  benchmark.sh  build-all-platforms.js  build-native-targets.cjs  clean-artifacts.js  copy-cli-binary.js  copy-native.js  create-gh-release.cjs  download-binary.cjs  extract_pixel_payload.js  format-benchmark-matrix.py  generate-compressible-data.sh  generate-json-test-data.sh  generate-real-data.sh  generate-test-data-simple.sh  pack-npm.cjs  postinstall.cjs  prepare-release.cjs  publish.cjs  release-flow.cjs  release.sh  run-integration-tests.cjs  run_reconst.js  test-gpu-vs-cpu.sh
src/: _esmodule_test.ts  cli.ts  hybrid-compression.ts  index.ts  minpng.ts  pack.ts  stub-progress.ts
src/types/: fflate.d.ts  lzma-purejs.d.ts  png-chunks.d.ts  roxify-tdoc.d.ts  zopflipng-bin.d.ts
src/utils/: audio.ts  constants.ts  crc.ts  decoder.ts  ecc.ts  encoder.ts  errors.ts  helpers.ts  inspection.ts  native.ts  optimization.ts  reconstitution.ts  robust-audio.ts  robust-image.ts  rust-cli-wrapper.ts  types.ts  zstd.ts
test/: benchmark.mjs  check-marker-start.js  checklist-validation.js  create-old-png.js  debug-decode.js  debug-image.js  debug-long-text.js  debug-marker-detection.js  debug-scale.js  decode-debug-file.js  extract-batch.js  extract-renamed.js  inspect-pixel-file.js  inspect-pixel-map.js  roundtrip-debug.js  run-all-tests.cjs  run-all-tests.js  run-decode-debug.js  test-deform-loop.js  test-deformed-resize.js  test-final-complete.js  test-full-buffer.js  test-gradient-background.js  test-marker-bytes.js  test-markers.js  test-no-end.js  test-real.js  test-simple-deform.js
test-data/codebase/: .env  .eslintrc.js  .gitignore  .pre-commit-config.yaml  .prettierrc  README.md  actions.js  bot.js  checkForChanges.js  clean-unused.js  commands.js  debug-auth.json  descriptions.js  ecosystem.config.js  eslint.config.mjs  getInvites.js  index.js  interactions.js  locales.js  package-lock.json  package.json  pnpm-lock.yaml  response.js  serv_blacklist.json  translations.json  voice-wrapper.cjs  whitelist.json
test-data/codebase/audio2text/: index.js  wrapper.cjs
test-data/codebase/config/: .env.example  antiRaidConfig.js  antiRaidHelpers.js  config.js  emojis.js  loadEnv.js  loggerConfig.json  serverTemplate.json  tokenHandler.js
test-data/codebase/data/: badwords.json  commandPermissions.json  configConstants.json  errorData.json  interactionTexts.json  languagePatterns.json  staticMessages.json
tests/: battery.sh  bench_e2e.sh
(+293 files in other folders)
