[package]
name = "roxify_native"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "roxify_native"
crate-type = ["cdylib"]
path = "native/lib.rs"

[[bin]]
name = "roxify_native"
path = "native/main.rs"

[dependencies]
napi = "2"
napi-derive = "2"
rayon = "1.7"
zstd = { version = "0.11", features = ["zstdmt"] }
crc32fast = "1.3"
adler = "1.0"
num_cpus = "1.16"
clap = { version = "4", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
png = "0.18.0"
flate2 = "1.1.5"
miniz_oxide = "0.8.9"
image = "0.25"
indicatif = "0.17"
walkdir = "2.5.0"
aes-gcm = "0.10"
pbkdf2 = "0.12"
rand = "0.8"
sha2 = "0.10"

wgpu = { version = "0.19", optional = true }
memmap2 = "0.9"
bytemuck = { version = "1.14", features = ["derive"] }
tokio = { version = "1", features = ["sync", "rt"] }
parking_lot = "0.12"
pollster = { version = "0.3", optional = true }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.51", features = ["Win32_Graphics_Direct3D12"] }

[features]
# default is intentionally empty so the crate compiles fast for local checks.
# Enable 'gpu' to pull in the WGPU and pollster dependencies (heavy).
# Example: `cargo build -p roxify_native --features gpu`
default = []

gpu = ["wgpu", "pollster"]
