[package]
name = "roxify_native"
version = "1.13.4"
edition = "2021"
publish = false

[lib]
name = "roxify_native"
crate-type = ["cdylib"]
path = "native/lib.rs"

[[bin]]
name = "roxify_native"
path = "native/main.rs"

[[bin]]
name = "bench_hybrid"
path = "native/bench_hybrid.rs"

[[bin]]
name = "test_stages"
path = "native/test_stages.rs"

[[bin]]
name = "test_small_bwt"
path = "native/test_small_bwt.rs"

[dev-dependencies]

[dependencies]
napi = "2"
napi-derive = "2"
rayon = "1.7"
zstd = { version = "0.11", features = ["zstdmt"] }
crc32fast = "1.3"
num_cpus = "1.16"
clap = { version = "4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
png = "0.18.0"
image = { version = "0.25", default-features = false, features = ["png"] }
# indicatif removed from default deps to reduce heavy build graph
walkdir = "2.5.0"
tar = "0.4"
aes-gcm = "0.10"
aes = "0.8"
ctr = "0.9"
cipher = { version = "0.4", features = ["std"] }
hmac = "0.12"
pbkdf2 = "0.12"
rand = "0.8"
sha2 = "0.10"
mimalloc = "0.1"
simd-adler32 = "0.3"

memmap2 = "0.9"
bytemuck = { version = "1.14", features = ["derive"] }
tokio = { version = "1", features = ["sync", "rt"], optional = true }
parking_lot = "0.12"
libsais = { version = "0.2.0", default-features = false }

[features]
default = []
async = ["tokio"]

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"

[profile.release-size]
inherits = "release"
opt-level = "z"
lto = true
strip = true

[profile.fastdev]
# Fast development profile for minimal user CPU and fast compilation.
# Lower optimization and high codegen units to parallelize compilation work,
# enable incremental to speed up subsequent incremental builds.
inherits = "release"
opt-level = 1
lto = false
codegen-units = 16
debug = false
incremental = true
panic = "abort"
